# rangepoll

./: Cargo.toml  INSTALL.md  Procfile  README.md  rangepoll.service
polls/: fruit.md  fruit.yml  pear.md
src/: admin.rs  config.rs  main.rs  poll.rs  rp_error.rs  voters.rs
static/css/: index.css
static/html/: index.html  voting_algorithm.html
static/js/: common.js  index.js  njs.min.js  poll_form_schema.json
templates/: admin.html.tera  edit.html.tera  forbidden.html.tera  invite_html.smtp.tera  invite_text.smtp.tera  login.html.tera  menu.html.tera  not_allowed.html.tera  poll_list.html.tera  reminder_html.smtp.tera  reminder_text.smtp.tera  user_menu.html.tera  vote_for.html.tera  vote_result.html.tera
templates/error/: 401.html.tera  404.html.tera  421.html.tera
