[package]
name = "rangepoll"
version = "0.1.0"
authors = ["Cyril Russo <cyril.russo@nexvision.fr>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.0"
comrak = "0.8"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "tera_templates"]