[package]
name = "rangepoll"
version = "0.8.0"
authors = ["X-Ryl669 <boite.pour.spam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.0"
comrak = "0.8"
array2d = "0.2.1"
jsonwebtoken = "7.2.0"
clap = "^2.32.0"
url = "2.1"
lettre = "0.9"
lettre_email = "0.9"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "tera_templates"]